force-app/main/default/objects/G1_PickItem__c/G1_PickItem__c.object-meta.xml
<CustomObject>
    <label>G1 PickItem</label>
    <nameField>
        <label>G1 PickItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G1 PickItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>