force-app/main/default/objects/G1_PickItem__c/fields/G1_Picklist__c.field-meta.xml
<CustomField>
    <fullName>G1_Picklist__c</fullName>
    <label>G1 Picklist</label>
    <referenceTo>G1_Picklist__c</referenceTo>
    <relationshipLabel>G1 PickItems</relationshipLabel>
    <relationshipName>G1_PickItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>