force-app/main/default/objects/G1_PickItem__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Seq</label>
    <length>200</length>
    <type>Text</type>
</CustomField>